Generate Prisma Client + CRUD Operations + Seeding With snaplet
