# src/resources/artists/artist.entity.ts
@@ -1,29 +1,0 @@
-import { Song } from 'src/resources/songs/song.entity';
-import { User } from 'src/resources/users/user.entity';
-import {
-  Column,
-  Entity,
-  JoinColumn,
-  ManyToMany,
-  OneToOne,
-  PrimaryGeneratedColumn,
-} from 'typeorm';
-
-@Entity('artists')
-export class Artist {
-  @PrimaryGeneratedColumn()
-  id: number;
-
-  @Column({ type: 'text', nullable: false })
-  name: string;
-
-  //   @OneToMany(() => Song, (song) => song.artists)
-  //   songs: Song[];
-
-  @OneToOne(() => User)
-  @JoinColumn()
-  user: User;
-
-  @ManyToMany(() => Song, (song) => song.artists)
-  songs: Song[];
-}
