# src/resources/songs/songs.module.ts
@@ -1,29 +1,9 @@
 import { Module } from '@nestjs/common';
-import { TypeOrmModule } from '@nestjs/typeorm';
-import { Song } from './song.entity';
 import { SongsController } from './songs.controller';
 import { SongsService } from './songs.service';
-import { Artist } from 'src/resources/artists/artist.entity';
 
-// const mockSongsService = {
-//   findAll() {
-//     return [
-//       {
-//         id: 1,
-//         title: 'Lasting lover',
-//       },
-//     ];
-//   },
-// };
 @Module({
-  imports: [TypeOrmModule.forFeature([Song, Artist])],
+  providers: [SongsService],
   controllers: [SongsController],
-  providers: [
-    // ? custom providers
-    SongsService, //* option 1
-    // { provide: SongsService, useClass: SongsService }, //* useClass
-    // { provide: SongsService, useValue: mockSongsService }, //* useValue
-    // { provide: 'CONNECTION', useValue: connection }, //* useValue 2
-  ],
 })
 export class SongsModule {}
