# src/resources/users/dto/create-user.dto.ts
@@ -1,19 +1,0 @@
-import { IsEmail, IsNotEmpty, IsString } from 'class-validator';
-
-export class CreateUserDTO {
-  @IsString()
-  @IsNotEmpty()
-  firstName: string;
-
-  @IsString()
-  @IsNotEmpty()
-  lastName: string;
-
-  @IsEmail()
-  @IsNotEmpty()
-  email: string;
-
-  @IsString()
-  @IsNotEmpty()
-  password: string;
-}
